--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.16.1",
+    "@types/formidable": "^1.2.2",
     "@types/node": "^15.6.1",
     "@types/webpack-env": "^1.16.0",
     "tslint": "^5.12.1",
