--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "typescript": "^3.9.9"
   },
   "dependencies": {
+    "@types/cors": "^2.8.10",
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "formidable": "^1.2.2"
